--- a/aws_comprehend/Project_AWS_Comprehend/templates/index.html
+++ b/aws_comprehend/Project_AWS_Comprehend/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>AWS NER</title>
+    <title>AWS</title>
     <style>
         body {
             font-family: sans-serif;
@@ -42,7 +42,7 @@
 <body>
     <form id="f1" action="/detect_entity" method="POST">
         <label>
-            <h2>Name Entity Recognition</h2>
+            <h2>AWS COMPREHEND NER & POS</h2>
         </label>
         <h3>Your Text:</h3>
         <label>
@@ -50,11 +50,11 @@
         </label>
         <div id="result">
 
-            <h3>NER:</h3>
+            <h3>Name Entity Recognition:</h3>
             <label>  
                 <textarea name="NER">{{ NER }}</textarea>
             </label>
-            <h3>POS:</h3>
+            <h3>Part of Speech:</h3>
             <label>
                 <textarea name="POS">{{ POS }}</textarea>
             </label>
